@@ -23,25 +23,16 @@
  */
 package hudson.plugins.ec2;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.when;
 
-import com.amazonaws.services.ec2.AmazonEC2;
-import com.amazonaws.services.ec2.model.DescribeInstancesResult;
-import com.amazonaws.services.ec2.model.Instance;
-import com.amazonaws.services.ec2.model.InstanceType;
-import com.amazonaws.services.ec2.model.Tag;
 import hudson.model.Node;
 import hudson.plugins.ec2.util.AmazonEC2FactoryMockImpl;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -49,32 +40,43 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import jenkins.model.Jenkins;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.mockito.stubbing.Answer;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.ec2.Ec2Client;
+import software.amazon.awssdk.services.ec2.model.DescribeInstancesResponse;
+import software.amazon.awssdk.services.ec2.model.Instance;
+import software.amazon.awssdk.services.ec2.model.InstanceType;
+import software.amazon.awssdk.services.ec2.model.Tag;
 
 /**
  * Unit tests related to {@link EC2Cloud}, but do not require a Jenkins instance.
  */
-@RunWith(MockitoJUnitRunner.Silent.class)
-public class EC2CloudUnitTest {
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
+class EC2CloudUnitTest {
 
     @Test
-    public void testEC2EndpointURLCreation() throws MalformedURLException {
-        EC2Cloud.DescriptorImpl descriptor = new EC2Cloud.DescriptorImpl();
-
-        assertEquals(new URL(EC2Cloud.DEFAULT_EC2_ENDPOINT), descriptor.determineEC2EndpointURL(null));
-        assertEquals(new URL(EC2Cloud.DEFAULT_EC2_ENDPOINT), descriptor.determineEC2EndpointURL(""));
-        assertEquals(new URL("https://www.abc.com"), descriptor.determineEC2EndpointURL("https://www.abc.com"));
+    void testBootstrapRegion() throws Exception {
+        assertEquals(Region.US_EAST_1, EC2Cloud.getBootstrapRegion(null));
+        assertEquals(Region.US_EAST_1, EC2Cloud.getBootstrapRegion(new URI("")));
+        assertEquals(Region.US_EAST_1, EC2Cloud.getBootstrapRegion(new URI("https://ec2.amazonaws.com/")));
+        assertEquals(Region.US_EAST_1, EC2Cloud.getBootstrapRegion(new URI("https://ec2.us-east-1.amazonaws.com/")));
+        assertEquals(Region.US_WEST_1, EC2Cloud.getBootstrapRegion(new URI("https://ec2.us-west-1.amazonaws.com/")));
+        assertEquals(
+                Region.US_GOV_EAST_1, EC2Cloud.getBootstrapRegion(new URI("https://ec2.us-gov-east-1.amazonaws.com/")));
+        assertEquals(
+                Region.US_GOV_WEST_1, EC2Cloud.getBootstrapRegion(new URI("https://ec2.us-gov-west-1.amazonaws.com/")));
     }
 
     @Test
-    public void testInstaceCap() throws Exception {
+    void testInstanceCap() {
         EC2Cloud cloud = new EC2Cloud(
                 "us-east-1",
                 true,
@@ -86,8 +88,8 @@ public class EC2CloudUnitTest {
                 Collections.emptyList(),
                 "roleArn",
                 "roleSessionName");
-        assertEquals(cloud.getInstanceCap(), Integer.MAX_VALUE);
-        assertEquals(cloud.getInstanceCapStr(), "");
+        assertEquals(Integer.MAX_VALUE, cloud.getInstanceCap());
+        assertEquals("", cloud.getInstanceCapStr());
 
         final int cap = 3;
         final String capStr = String.valueOf(cap);
@@ -102,12 +104,12 @@ public class EC2CloudUnitTest {
                 Collections.emptyList(),
                 "roleArn",
                 "roleSessionName");
-        assertEquals(cloud.getInstanceCap(), cap);
+        assertEquals(cap, cloud.getInstanceCap());
         assertEquals(cloud.getInstanceCapStr(), capStr);
     }
 
     @Test
-    public void testSpotInstanceCount() throws Exception {
+    void testSpotInstanceCount() throws Exception {
         final int numberOfSpotInstanceRequests = 105;
         EC2Cloud cloud = Mockito.spy(new EC2Cloud(
                 "us-east-1",
@@ -130,9 +132,13 @@ public class EC2CloudUnitTest {
 
             List<Instance> instances = new ArrayList<>();
             for (int i = 0; i <= numberOfSpotInstanceRequests; i++) {
-                instances.add(new Instance()
-                        .withInstanceId("id" + i)
-                        .withTags(new Tag().withKey("jenkins_slave_type").withValue("spot")));
+                instances.add(Instance.builder()
+                        .instanceId("id" + i)
+                        .tags(Tag.builder()
+                                .key("jenkins_slave_type")
+                                .value("spot")
+                                .build())
+                        .build());
             }
 
             AmazonEC2FactoryMockImpl.instances = instances;
@@ -153,21 +159,7 @@ public class EC2CloudUnitTest {
     }
 
     @Test
-    public void testCNPartition() {
-        assertEquals(
-                EC2Cloud.getAwsPartitionHostForService("cn-northwest-1", "ec2"), "ec2.cn-northwest-1.amazonaws.com.cn");
-        assertEquals(
-                EC2Cloud.getAwsPartitionHostForService("cn-northwest-1", "s3"), "s3.cn-northwest-1.amazonaws.com.cn");
-    }
-
-    @Test
-    public void testNormalPartition() {
-        assertEquals(EC2Cloud.getAwsPartitionHostForService("us-east-1", "ec2"), "ec2.us-east-1.amazonaws.com");
-        assertEquals(EC2Cloud.getAwsPartitionHostForService("us-east-1", "s3"), "s3.us-east-1.amazonaws.com");
-    }
-
-    @Test
-    public void testSlaveTemplateAddition() throws Exception {
+    void testSlaveTemplateAddition() throws Exception {
         EC2Cloud cloud = new EC2Cloud(
                 "us-east-1",
                 true,
@@ -185,7 +177,7 @@ public class EC2CloudUnitTest {
                 null,
                 "default",
                 "foo",
-                InstanceType.M1Large,
+                InstanceType.M1_LARGE.toString(),
                 false,
                 "ttt",
                 Node.Mode.NORMAL,
@@ -223,13 +215,14 @@ public class EC2CloudUnitTest {
                 EC2AbstractSlave.DEFAULT_METADATA_ENDPOINT_ENABLED,
                 EC2AbstractSlave.DEFAULT_METADATA_TOKENS_REQUIRED,
                 EC2AbstractSlave.DEFAULT_METADATA_HOPS_LIMIT,
-                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED);
+                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED,
+                EC2AbstractSlave.DEFAULT_ENCLAVE_ENABLED);
         cloud.addTemplate(orig);
         assertNotNull(cloud.getTemplate(orig.description));
     }
 
     @Test
-    public void testSlaveTemplateUpdate() throws Exception {
+    void testSlaveTemplateUpdate() throws Exception {
         EC2Cloud cloud = new EC2Cloud(
                 "us-east-1",
                 true,
@@ -247,7 +240,7 @@ public class EC2CloudUnitTest {
                 null,
                 "default",
                 "foo",
-                InstanceType.M1Large,
+                InstanceType.M1_LARGE.toString(),
                 false,
                 "ttt",
                 Node.Mode.NORMAL,
@@ -285,14 +278,15 @@ public class EC2CloudUnitTest {
                 EC2AbstractSlave.DEFAULT_METADATA_ENDPOINT_ENABLED,
                 EC2AbstractSlave.DEFAULT_METADATA_TOKENS_REQUIRED,
                 EC2AbstractSlave.DEFAULT_METADATA_HOPS_LIMIT,
-                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED);
+                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED,
+                EC2AbstractSlave.DEFAULT_ENCLAVE_ENABLED);
         SlaveTemplate secondSlaveTemplate = new SlaveTemplate(
                 "ami-123",
                 EC2AbstractSlave.TEST_ZONE,
                 null,
                 "default",
                 "foo",
-                InstanceType.M1Large,
+                InstanceType.M1_LARGE.toString(),
                 false,
                 "ttt",
                 Node.Mode.NORMAL,
@@ -330,7 +324,8 @@ public class EC2CloudUnitTest {
                 EC2AbstractSlave.DEFAULT_METADATA_ENDPOINT_ENABLED,
                 EC2AbstractSlave.DEFAULT_METADATA_TOKENS_REQUIRED,
                 EC2AbstractSlave.DEFAULT_METADATA_HOPS_LIMIT,
-                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED);
+                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED,
+                EC2AbstractSlave.DEFAULT_ENCLAVE_ENABLED);
         cloud.addTemplate(oldSlaveTemplate);
         cloud.addTemplate(secondSlaveTemplate);
         SlaveTemplate newSlaveTemplate = new SlaveTemplate(
@@ -339,7 +334,7 @@ public class EC2CloudUnitTest {
                 null,
                 "default",
                 "foo",
-                InstanceType.M1Large,
+                InstanceType.M1_LARGE.toString(),
                 false,
                 "ttt",
                 Node.Mode.NORMAL,
@@ -377,17 +372,18 @@ public class EC2CloudUnitTest {
                 EC2AbstractSlave.DEFAULT_METADATA_ENDPOINT_ENABLED,
                 EC2AbstractSlave.DEFAULT_METADATA_TOKENS_REQUIRED,
                 EC2AbstractSlave.DEFAULT_METADATA_HOPS_LIMIT,
-                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED);
+                EC2AbstractSlave.DEFAULT_METADATA_SUPPORTED,
+                EC2AbstractSlave.DEFAULT_ENCLAVE_ENABLED);
         int index = cloud.getTemplates().indexOf(oldSlaveTemplate);
 
         cloud.updateTemplate(newSlaveTemplate, "OldSlaveDescription");
         assertNull(cloud.getTemplate("OldSlaveDescription"));
         assertNotNull(cloud.getTemplate("NewSlaveDescription"));
-        Assert.assertEquals(index, cloud.getTemplates().indexOf(newSlaveTemplate)); // assert order of templates is kept
+        assertEquals(index, cloud.getTemplates().indexOf(newSlaveTemplate)); // assert order of templates is kept
     }
 
     @Test
-    public void testReattachOrphanStoppedNodes() throws Exception {
+    void testReattachOrphanStoppedNodes() throws Exception {
         /* Mocked items */
         EC2Cloud cloud = new EC2Cloud(
                 "us-east-1",
@@ -401,11 +397,11 @@ public class EC2CloudUnitTest {
                 "roleArn",
                 "roleSessionName");
         EC2Cloud spyCloud = Mockito.spy(cloud);
-        AmazonEC2 mockEc2 = Mockito.mock(AmazonEC2.class);
+        Ec2Client mockEc2 = Mockito.mock(Ec2Client.class);
         Jenkins mockJenkins = Mockito.mock(Jenkins.class);
         EC2AbstractSlave mockOrphanNode = Mockito.mock(EC2AbstractSlave.class);
         SlaveTemplate mockSlaveTemplate = Mockito.mock(SlaveTemplate.class);
-        DescribeInstancesResult mockedDIResult = Mockito.mock(DescribeInstancesResult.class);
+        DescribeInstancesResponse mockedDIResult = Mockito.mock(DescribeInstancesResponse.class);
         Instance mockedInstance = Mockito.mock(Instance.class);
         List<Instance> listOfMockedInstances = new ArrayList<>();
         listOfMockedInstances.add(mockedInstance);
@@ -416,13 +412,10 @@ public class EC2CloudUnitTest {
             Mockito.doReturn(Arrays.asList(orphanNodes)).when(mockSlaveTemplate).toSlaves(eq(listOfMockedInstances));
             List<Node> listOfJenkinsNodes = new ArrayList<>();
 
-            Mockito.doAnswer(new Answer<Void>() {
-                        @Override
-                        public Void answer(InvocationOnMock invocation) {
-                            Node n = (Node) invocation.getArguments()[0];
-                            listOfJenkinsNodes.add(n);
-                            return null;
-                        }
+            Mockito.doAnswer((Answer<Void>) invocation -> {
+                        Node n = (Node) invocation.getArguments()[0];
+                        listOfJenkinsNodes.add(n);
+                        return null;
                     })
                     .when(mockJenkins)
                     .addNode(Mockito.any(Node.class));
@@ -432,20 +425,20 @@ public class EC2CloudUnitTest {
             Mockito.doReturn(mockEc2).when(spyCloud).connect();
             Mockito.doReturn(mockedDIResult)
                     .when(mockSlaveTemplate)
-                    .getDescribeInstanceResult(Mockito.any(AmazonEC2.class), eq(true));
+                    .getDescribeInstanceResult(Mockito.any(Ec2Client.class), eq(true));
             Mockito.doReturn(listOfMockedInstances)
                     .when(mockSlaveTemplate)
                     .findOrphansOrStopped(eq(mockedDIResult), Mockito.anyInt());
             Mockito.doNothing()
                     .when(mockSlaveTemplate)
-                    .wakeOrphansOrStoppedUp(Mockito.any(AmazonEC2.class), eq(listOfMockedInstances));
+                    .wakeOrphansOrStoppedUp(Mockito.any(Ec2Client.class), eq(listOfMockedInstances));
 
             /* Actual call to test*/
             spyCloud.attemptReattachOrphanOrStoppedNodes(mockJenkins, mockSlaveTemplate, 1);
 
             /* Checks */
             Mockito.verify(mockSlaveTemplate, times(1))
-                    .wakeOrphansOrStoppedUp(Mockito.any(AmazonEC2.class), eq(listOfMockedInstances));
+                    .wakeOrphansOrStoppedUp(Mockito.any(Ec2Client.class), eq(listOfMockedInstances));
             Node[] expectedNodes = {mockOrphanNode};
             assertArrayEquals(expectedNodes, listOfJenkinsNodes.toArray());
         }
